--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/โครงสร้่างข้อมูล.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/โครงสร้่างข้อมูล.md
@@ -30,7 +30,7 @@
 5. Import Invoice Detail (Permit)	ประกอบด้วย	 3 Fields
 6. Import Invoice Detail (Deposit)	ประกอบด้วย	 2 Fields
 
-## Import Declaration Control
+### Import Declaration Control
 
 ![enter image description here](https://github.com/yosarawut/WorkingArea/raw/master/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/img/e-Import_2018png_Page7.png)
 
@@ -63,7 +63,13 @@
 ![enter image description here](https://github.com/yosarawut/WorkingArea/raw/master/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/img/e-Import_2018png_Page24.png)
 
 ![enter image description here](https://github.com/yosarawut/WorkingArea/raw/master/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/img/e-Import_2018png_Page25.png)
+
+### Import Invoice Control
+
+
+
+
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTkxNzcxNTIyNCwtNjk0NzYzMzM5LC00OT
+eyJoaXN0b3J5IjpbMTU1NjExMzEyOSwtNjk0NzYzMzM5LC00OT
 AzNTg5MTksLTIxMDU4ODc5NTBdfQ==
 -->
