--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/โครงสร้่างข้อมูล.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/โครงสร้่างข้อมูล.md
@@ -67,9 +67,15 @@
 ### Import Invoice Control
 
 
+![enter image description here](https://github.com/yosarawut/WorkingArea/raw/master/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/img/e-Import_2018png_Page26.png)
 
+![enter image description here](https://github.com/yosarawut/WorkingArea/raw/master/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/img/e-Import_2018png_Page27.png)
+
+![enter image description here](https://github.com/yosarawut/WorkingArea/raw/master/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/img/e-Import_2018png_Page28.png)
+
+![enter image description here](https://github.com/yosarawut/WorkingArea/raw/master/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/img/e-Import_2018png_Page29.png)
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTU1NjExMzEyOSwtNjk0NzYzMzM5LC00OT
+eyJoaXN0b3J5IjpbMTQwODU4NzcyNywtNjk0NzYzMzM5LC00OT
 AzNTg5MTksLTIxMDU4ODc5NTBdfQ==
 -->
