--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/โครงสร้่างข้อมูล.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/โครงสร้่างข้อมูล.md
@@ -75,7 +75,12 @@
 
 ![enter image description here](https://github.com/yosarawut/WorkingArea/raw/master/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/img/e-Import_2018png_Page29.png)
 
+![enter image description here](https://github.com/yosarawut/WorkingArea/raw/master/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/img/e-Import_2018png_Page30.png)
+
+### Import Invoice Detail
+
+
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTQwODU4NzcyNywtNjk0NzYzMzM5LC00OT
+eyJoaXN0b3J5IjpbLTIwODEwNzYzMSwtNjk0NzYzMzM5LC00OT
 AzNTg5MTksLTIxMDU4ODc5NTBdfQ==
 -->
