KnowledgeCenter/e-Customs/e-Import/e-Import-manual/โครงสร้่างข้อมูล.md updated from https://stackedit.io/

--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/โครงสร้่างข้อมูล.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/โครงสร้่างข้อมูล.md
@@ -79,8 +79,9 @@
 
 ### Import Invoice Detail
 
+![enter image description here](https://github.com/yosarawut/WorkingArea/raw/master/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/img/e-Import_2018png_Page30.png)
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTIwODEwNzYzMSwtNjk0NzYzMzM5LC00OT
-AzNTg5MTksLTIxMDU4ODc5NTBdfQ==
+eyJoaXN0b3J5IjpbMTU1MzUwNTIxMSwtMjA4MTA3NjMxLC02OT
+Q3NjMzMzksLTQ5MDM1ODkxOSwtMjEwNTg4Nzk1MF19
 -->
