KnowledgeCenter/e-Customs/e-Import/e-Import-manual/โครงสร้่างข้อมูล.md updated from https://stackedit.io/

--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/โครงสร้่างข้อมูล.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/โครงสร้่างข้อมูล.md
@@ -23,7 +23,7 @@
 
 ## โครงสร้างข้อมูลใบขนสินค้าขาเข้า แบ่งได้เป็น 6 ส่วนดังนี้
 
-1. Import Declaration Control	ประกอบด้วย	73 Fields
+1. [Import Declaration Control](### Import Declaration Control)	ประกอบด้วย	73 Fields
 2. Import Invoice Control 	ประกอบด้วย	35 Fields
 3. Import Invoice Detail	ประกอบด้วย	76 Fields
 4. Import Invoice Detail (Duty)	ประกอบด้วย	14 Fields
@@ -123,11 +123,11 @@
 ![enter image description here](https://github.com/yosarawut/WorkingArea/raw/master/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/img/e-Import_2018png_Page49.png)
 
 
-
+### Import Invoice Detail (Deposit)
 ![enter image description here](https://github.com/yosarawut/WorkingArea/raw/master/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/img/e-Import_2018png_Page50.png)
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTYzNzg0MjcwLC0yMDgxMDc2MzEsLTY5ND
+eyJoaXN0b3J5IjpbMTkzMzI0MDg1LC0yMDgxMDc2MzEsLTY5ND
 c2MzMzOSwtNDkwMzU4OTE5LC0yMTA1ODg3OTUwXX0=
 -->
