KnowledgeCenter/e-Customs/e-Import/e-Import-manual/โครงสร้่างข้อมูล.md updated from https://stackedit.io/

--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/โครงสร้่างข้อมูล.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/โครงสร้่างข้อมูล.md
@@ -30,7 +30,8 @@
 5. Import Invoice Detail (Permit)	ประกอบด้วย	 3 Fields
 6. Import Invoice Detail (Deposit)	ประกอบด้วย	 2 Fields
 
-### Import Declaration Control
+### Import Declaration Control  {#mht}
+
 
 ![enter image description here](https://github.com/yosarawut/WorkingArea/raw/master/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/img/e-Import_2018png_Page7.png)
 
@@ -128,7 +129,7 @@
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEwMjQyNzI3NjcsMTkzMzI0MDg1LC0yMD
-gxMDc2MzEsLTY5NDc2MzMzOSwtNDkwMzU4OTE5LC0yMTA1ODg3
-OTUwXX0=
+eyJoaXN0b3J5IjpbNzcwMTQxNjk1LDE5MzMyNDA4NSwtMjA4MT
+A3NjMxLC02OTQ3NjMzMzksLTQ5MDM1ODkxOSwtMjEwNTg4Nzk1
+MF19
 -->
