KnowledgeCenter/e-Customs/e-Import/e-Import-manual/โครงสร้่างข้อมูล.md updated from https://stackedit.io/

--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/โครงสร้่างข้อมูล.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/โครงสร้่างข้อมูล.md
@@ -23,8 +23,8 @@
 
 ## โครงสร้างข้อมูลใบขนสินค้าขาเข้า แบ่งได้เป็น 6 ส่วนดังนี้
 
-1. [Import Declaration Control](#Import Declaration Control)	ประกอบด้วย	73 Fields
-2. Import Invoice Control 	ประกอบด้วย	35 Fields
+1. [**Import Declaration Control**](#Import-Declaration-Control)	ประกอบด้วย	73 Fields
+2. [**Import Invoice Control**](#Import-Invoice-Control)	ประกอบด้วย	35 Fields
 3. Import Invoice Detail	ประกอบด้วย	76 Fields
 4. Import Invoice Detail (Duty)	ประกอบด้วย	14 Fields
 5. Import Invoice Detail (Permit)	ประกอบด้วย	 3 Fields
@@ -129,7 +129,7 @@
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNzcwMTQxNjk1LDE5MzMyNDA4NSwtMjA4MT
-A3NjMxLC02OTQ3NjMzMzksLTQ5MDM1ODkxOSwtMjEwNTg4Nzk1
-MF19
+eyJoaXN0b3J5IjpbMTc2OTcwODYxMiwxOTMzMjQwODUsLTIwOD
+EwNzYzMSwtNjk0NzYzMzM5LC00OTAzNTg5MTksLTIxMDU4ODc5
+NTBdfQ==
 -->
