--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/โครงสร้่างข้อมูล.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/โครงสร้่างข้อมูล.md
@@ -25,7 +25,7 @@
 
 1. [**Import Declaration Control**](#Import-Declaration-Control)	ประกอบด้วย	73 Fields
 2. [**Import Invoice Control**](#Import-Invoice-Control)	ประกอบด้วย	35 Fields
-3. Import Invoice Detail	ประกอบด้วย	76 Fields
+3. [**Import Invoice Detail**](#Import-Invoice-Detail)	ประกอบด้วย	76 Fields
 4. Import Invoice Detail (Duty)	ประกอบด้วย	14 Fields
 5. Import Invoice Detail (Permit)	ประกอบด้วย	 3 Fields
 6. Import Invoice Detail (Deposit)	ประกอบด้วย	 2 Fields
@@ -129,7 +129,7 @@
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTc2OTcwODYxMiwxOTMzMjQwODUsLTIwOD
-EwNzYzMSwtNjk0NzYzMzM5LC00OTAzNTg5MTksLTIxMDU4ODc5
-NTBdfQ==
+eyJoaXN0b3J5IjpbMTU1NzMwMDEzNywxNzY5NzA4NjEyLDE5Mz
+MyNDA4NSwtMjA4MTA3NjMxLC02OTQ3NjMzMzksLTQ5MDM1ODkx
+OSwtMjEwNTg4Nzk1MF19
 -->
