KnowledgeCenter/e-Customs/e-Import/e-Import-manual/โครงสร้่างข้อมูล.md updated from https://stackedit.io/

--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/โครงสร้่างข้อมูล.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/โครงสร้่างข้อมูล.md
@@ -30,7 +30,7 @@
 5. Import Invoice Detail (Permit)	ประกอบด้วย	 3 Fields
 6. Import Invoice Detail (Deposit)	ประกอบด้วย	 2 Fields
 
-### Import Declaration Control  {#mht}
+### Import Declaration Control
 
 
 ![enter image description here](https://github.com/yosarawut/WorkingArea/raw/master/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/img/e-Import_2018png_Page7.png)
@@ -129,7 +129,7 @@
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTU1NzMwMDEzNywxNzY5NzA4NjEyLDE5Mz
+eyJoaXN0b3J5IjpbLTY2NzIyOTg5MSwxNzY5NzA4NjEyLDE5Mz
 MyNDA4NSwtMjA4MTA3NjMxLC02OTQ3NjMzMzksLTQ5MDM1ODkx
 OSwtMjEwNTg4Nzk1MF19
 -->
