KnowledgeCenter/e-Customs/e-Import/e-Import-manual/โครงสร้่างข้อมูล.md updated from https://stackedit.io/

--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/โครงสร้่างข้อมูล.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/โครงสร้่างข้อมูล.md
@@ -26,7 +26,7 @@
 1. [**Import Declaration Control**](#import-declaration-control)	ประกอบด้วย	73 Fields
 2. [**Import Invoice Control**](#import-invoice-control)	ประกอบด้วย	35 Fields
 3. [**Import Invoice Detail**](#import-invoice-detail)	ประกอบด้วย	76 Fields
-4. Import Invoice Detail (Duty)	ประกอบด้วย	14 Fields
+4. [**Import Invoice Detail (Duty)**](#import-invoice-duty)	ประกอบด้วย	14 Fields
 5. Import Invoice Detail (Permit)	ประกอบด้วย	 3 Fields
 6. Import Invoice Detail (Deposit)	ประกอบด้วย	 2 Fields
 
@@ -129,7 +129,7 @@
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTAwNDAxNTk2NSwxNzY5NzA4NjEyLDE5Mz
+eyJoaXN0b3J5IjpbMTQyNTQzNDY2OSwxNzY5NzA4NjEyLDE5Mz
 MyNDA4NSwtMjA4MTA3NjMxLC02OTQ3NjMzMzksLTQ5MDM1ODkx
 OSwtMjEwNTg4Nzk1MF19
 -->
