KnowledgeCenter/e-Customs/e-Import/e-Import-manual/โครงสร้่างข้อมูล.md updated from https://stackedit.io/

--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/โครงสร้่างข้อมูล.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/โครงสร้่างข้อมูล.md
@@ -27,8 +27,8 @@
 2. [**Import Invoice Control**](#import-invoice-control)	ประกอบด้วย	35 Fields
 3. [**Import Invoice Detail**](#import-invoice-detail)	ประกอบด้วย	76 Fields
 4. [**Import Invoice Detail (Duty)**](#import-invoice-duty)	ประกอบด้วย	14 Fields
-5. Import Invoice Detail (Permit)	ประกอบด้วย	 3 Fields
-6. Import Invoice Detail (Deposit)	ประกอบด้วย	 2 Fields
+5. [**Import Invoice Detail (Permit)**](#import-invoice-detail-permit)	ประกอบด้วย	 3 Fields
+6. [**Import Invoice Detail (Deposit)**](#import-invoice-detail-deposit)	ประกอบด้วย	 2 Fields
 
 ### Import Declaration Control
 
@@ -109,7 +109,7 @@
 ![enter image description here](https://github.com/yosarawut/WorkingArea/raw/master/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/img/e-Import_2018png_Page44.png)
 
 
-### Import Invoice Detail (Duty)
+### Import Invoice Duty
 
 ![enter image description here](https://github.com/yosarawut/WorkingArea/raw/master/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/img/e-Import_2018png_Page45.png)
 
@@ -117,19 +117,19 @@
 
 ![enter image description here](https://github.com/yosarawut/WorkingArea/raw/master/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/img/e-Import_2018png_Page47.png)
 
-### Import Invoice Detail (Permit)
+### Import Invoice Permit
 
 ![enter image description here](https://github.com/yosarawut/WorkingArea/raw/master/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/img/e-Import_2018png_Page48.png)
 
 ![enter image description here](https://github.com/yosarawut/WorkingArea/raw/master/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/img/e-Import_2018png_Page49.png)
 
 
-### Import Invoice Detail (Deposit)
+### Import Invoice Deposit
 ![enter image description here](https://github.com/yosarawut/WorkingArea/raw/master/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/img/e-Import_2018png_Page50.png)
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTQyNTQzNDY2OSwxNzY5NzA4NjEyLDE5Mz
-MyNDA4NSwtMjA4MTA3NjMxLC02OTQ3NjMzMzksLTQ5MDM1ODkx
-OSwtMjEwNTg4Nzk1MF19
+eyJoaXN0b3J5IjpbMjQzNjk5MDc4LDE3Njk3MDg2MTIsMTkzMz
+I0MDg1LC0yMDgxMDc2MzEsLTY5NDc2MzMzOSwtNDkwMzU4OTE5
+LC0yMTA1ODg3OTUwXX0=
 -->
