KnowledgeCenter/e-Customs/e-Import/e-Import-manual/โครงสร้่างข้อมูล.md updated from https://stackedit.io/

--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/โครงสร้่างข้อมูล.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/โครงสร้่างข้อมูล.md
@@ -10,6 +10,7 @@
 3. หาก Field ใด กำหนดให้ต้องระบุค่า เมื่อเข้าเงื่อนไขที่กำหนด **(Value = C)** แต่ผู้บันทึกไม่สามารถหาข้อมูลได้
 	- สำหรับ Field ที่เป็น Alphabet (แสดงออกเป็นตัวอักษร) ให้ระบุค่าเป็น N/A 
 	- สำหรับ Field ที่เป็น Numeric (แสดงออกเป็นตัวเลข) ให้ระบุค่าเป็น 0 (ศูนย์)
+	- 
 ## อักษรย่อ ที่ใช้ในการอธิบายรูปแบบชนิดของข้อมูล
 |อักษรย่อ|	คำอธิบาย|
 |:--|:--|
@@ -27,8 +28,8 @@
 2. [**Import Invoice Control**](#import-invoice-control)	ประกอบด้วย	35 Fields
 3. [**Import Invoice Detail**](#import-invoice-detail)	ประกอบด้วย	76 Fields
 4. [**Import Invoice Detail (Duty)**](#import-invoice-duty)	ประกอบด้วย	14 Fields
-5. [**Import Invoice Detail (Permit)**](#import-invoice-detail-permit)	ประกอบด้วย	 3 Fields
-6. [**Import Invoice Detail (Deposit)**](#import-invoice-detail-deposit)	ประกอบด้วย	 2 Fields
+5. [**Import Invoice Detail (Permit)**](#import-invoice-permit)	ประกอบด้วย	 3 Fields
+6. [**Import Invoice Detail (Deposit)**](#import-invoice-deposit)	ประกอบด้วย	 2 Fields
 
 ### Import Declaration Control
 
@@ -129,7 +130,7 @@
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMjQzNjk5MDc4LDE3Njk3MDg2MTIsMTkzMz
-I0MDg1LC0yMDgxMDc2MzEsLTY5NDc2MzMzOSwtNDkwMzU4OTE5
-LC0yMTA1ODg3OTUwXX0=
+eyJoaXN0b3J5IjpbLTE1NDUxMDA2MzMsMTc2OTcwODYxMiwxOT
+MzMjQwODUsLTIwODEwNzYzMSwtNjk0NzYzMzM5LC00OTAzNTg5
+MTksLTIxMDU4ODc5NTBdfQ==
 -->
