--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/โครงสร้่างข้อมูล.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/โครงสร้่างข้อมูล.md
@@ -1,6 +1,15 @@
 โครงสร้างข้อมูลใบขนสินค้าขาเข้า
 ===
 
+## โครงสร้างข้อมูลใบขนสินค้าขาเข้า แบ่งได้เป็น 6 ส่วนดังนี้
+
+1. [**Import Declaration Control**](#import-declaration-control)	ประกอบด้วย	73 Fields
+2. [**Import Invoice Control**](#import-invoice-control)	ประกอบด้วย	35 Fields
+3. [**Import Invoice Detail**](#import-invoice-detail)	ประกอบด้วย	76 Fields
+4. [**Import Invoice Detail (Duty)**](#import-invoice-duty)	ประกอบด้วย	14 Fields
+5. [**Import Invoice Detail (Permit)**](#import-invoice-permit)	ประกอบด้วย	 3 Fields
+6. [**Import Invoice Detail (Deposit)**](#import-invoice-deposit)	ประกอบด้วย	 2 Fields
+
 ## เงื่อนไขการบันทึกข้อมูล ในกรณีผู้บันทึกไม่สามารถหาข้อมูลได้
 
 1. หาก Field ใด กำหนดให้ต้องระบุค่า **(Value = M)** แต่ผู้บันทึกไม่สามารถหาข้อมูลได้
@@ -22,14 +31,8 @@
 |an..3|	ข้อมูลชนิดตัวอักษรหรือตัวเลขความยาวข้อมูลแปรผันตามความยาวสูงสุด 3 ตัวอักษร|
 |n..16,2|ข้อมูลชนิดตัวเลขความยาวข้อมูลแปรผันตามความยาวสูงสุด 16 ตัวอักษรรวมความยาวทศนิยมสูงสุด 2 ตัวอักษร|
 
-## โครงสร้างข้อมูลใบขนสินค้าขาเข้า แบ่งได้เป็น 6 ส่วนดังนี้
 
-1. [**Import Declaration Control**](#import-declaration-control)	ประกอบด้วย	73 Fields
-2. [**Import Invoice Control**](#import-invoice-control)	ประกอบด้วย	35 Fields
-3. [**Import Invoice Detail**](#import-invoice-detail)	ประกอบด้วย	76 Fields
-4. [**Import Invoice Detail (Duty)**](#import-invoice-duty)	ประกอบด้วย	14 Fields
-5. [**Import Invoice Detail (Permit)**](#import-invoice-permit)	ประกอบด้วย	 3 Fields
-6. [**Import Invoice Detail (Deposit)**](#import-invoice-deposit)	ประกอบด้วย	 2 Fields
+
 
 ### Import Declaration Control
 
@@ -130,7 +133,7 @@
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE0OTM3OTEwMDEsMTc2OTcwODYxMiwxOT
-MzMjQwODUsLTIwODEwNzYzMSwtNjk0NzYzMzM5LC00OTAzNTg5
-MTksLTIxMDU4ODc5NTBdfQ==
+eyJoaXN0b3J5IjpbMTE0MTc3MzQyNSwxNzY5NzA4NjEyLDE5Mz
+MyNDA4NSwtMjA4MTA3NjMxLC02OTQ3NjMzMzksLTQ5MDM1ODkx
+OSwtMjEwNTg4Nzk1MF19
 -->
