--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/รูปแบบเลขที่ใบขนสินค้า.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/รูปแบบเลขที่ใบขนสินค้า.md
@@ -1,4 +1,9 @@
-รูปแบบเลขที่ใบขนสินค้า**
+รูปแบบเลขที่ใบขนสินค้า
+==
+
+![enter image description here](https://github.com/yosarawut/WorkingArea/raw/master/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/img/e-Import_2018png_Page7.png)
+
+
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTIzNTI4NzgzMV19
+eyJoaXN0b3J5IjpbMTgyMDAyMDg3NV19
 -->
