KnowledgeCenter/e-Customs/e-Import/e-Import-manual/การปฏิบัติพิธีการศุลกากร.md updated from https://stackedit.io/

--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/การปฏิบัติพิธีการศุลกากร.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/การปฏิบัติพิธีการศุลกากร.md
@@ -13,8 +13,8 @@
 <br/>
 
 
-## การตรวจสอบผลการคำนวณมูลค่าเงินนำเข้า เงินบาท และเงินต่างประเทศ ในใบขนสินค้าขาเข้า 
-![enter image description here](https://github.com/yosarawut/WorkingArea/raw/master/KnowledgeCenter/img/30-07-2019%2017-04-55.jpg)
+
+
 
 
 ## การตรวจสอบข้อมูลใบขนสินค้าขาเข้าและขาออก กับระบบทะเบียนผู้มาติดต่อ
@@ -250,7 +250,7 @@
 [2]: https://www.facebook.com/ECS.24hr/
 [3]: http://www.customs.go.th
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEzNDMxNTY0MzcsLTE4MjkzMDU5ODUsND
-E3NzUyMjMyLC0xNjkxMTc3ODk0LDU3MTA5NTgwMyw0NzQ4MjI2
-ODNdfQ==
+eyJoaXN0b3J5IjpbLTQ3MTk5OTU1NywtMTM0MzE1NjQzNywtMT
+gyOTMwNTk4NSw0MTc3NTIyMzIsLTE2OTExNzc4OTQsNTcxMDk1
+ODAzLDQ3NDgyMjY4M119
 -->
