KnowledgeCenter/e-Customs/e-Import/e-Import-manual/ระบบทะเบียนผู้มาติดต่อ.md updated from https://stackedit.io/

--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/ระบบทะเบียนผู้มาติดต่อ.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/ระบบทะเบียนผู้มาติดต่อ.md
@@ -1,5 +1,5 @@
-การตรวจสอบข้อมูลใบขนสินค้าขาเข้าและขาออก กับระบบทะเบียนผู้มาติดต่อ
-===
+## การตรวจสอบข้อมูลใบขนสินค้าขาเข้าและขาออก กับระบบทะเบียนผู้มาติดต่อ
+
 1. การตรวจสอบลายเซ็นอิเล็กทรอนิกส์ (Digital Signature) มีเงื่อนไขดังนี้
 	- VAT ID ของ ลายเซ็นอิเล็กทรอนิกส์ ต้องเท่ากับเลขประจำตัวผู้เสียภาษีอากรของผู้นำเข้า/ผู้ส่งออก (Company Tax No) หรือ 
 	- VAT ID ของ ลายเซ็นอิเล็กทรอนิกส์ ต้องเท่ากับเลขประจำตัวผู้เสียภาษีอากรของตัวแทนออกของ (Broker Tax No)  หรือ
@@ -21,5 +21,5 @@
 	- ต้องเป็น ผู้จัดการ/ผู้รับมอบอำนาจ ของ ตัวแทนออกของ หรือ
 	- ต้องเป็น ผู้จัดการ/ผู้รับมอบอำนาจ ของ ตัวแทนออกของผู้รับจ้างช่วง ของ ตัวแทนออกของ
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE3OTIxODc0NzddfQ==
+eyJoaXN0b3J5IjpbLTE4ODcxMTI0MTJdfQ==
 -->
