KnowledgeCenter/e-Customs/e-Import/e-Import-manual/วันนำเข้า.md updated from https://stackedit.io/

--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/วันนำเข้า.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/วันนำเข้า.md
@@ -1,5 +1,5 @@
-วันนำเข้า (Arrival Date)
-===
+## วันนำเข้า (Arrival Date)
+
  
 วันนำเข้า (Arrival Date) วันที่นำเข้ามาสำเร็จ ตามมาตรา 50 แห่งพระราชบัญญัติศุลกากร พ.ศ. 2560  วันที่นำเข้า ปี ค.ศ. เดือน วัน (CCYYMMDD) ให้กำหนดดังนี้
 
@@ -20,5 +20,5 @@
 |เรือเล็กทางทะเล สำหรับด่านศุลกากรทางทะเล|8|วันที่เรือมาถึงเขตจอดเรือหรือเขตท่าเรือด่านศุลกากร เช่น ด่านศุลกากรระนอง, ด่านศุลกากรคลองใหญ่|
 |ทางผู้โดยสารนำพาจากอากาศยาน|9|วันที่อากาศยานที่นำของเข้ามานั้นได้ถึงสนามบินที่เป็นด่านศุลกากร|
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNDg1MzA4ODk4XX0=
+eyJoaXN0b3J5IjpbLTE3OTYyODQ0MDUsNDg1MzA4ODk4XX0=
 -->
