KnowledgeCenter/e-Customs/e-Import/e-Import-manual/เลขที่ใบตราส่ง.md updated from https://stackedit.io/

--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/เลขที่ใบตราส่ง.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/เลขที่ใบตราส่ง.md
@@ -1,5 +1,5 @@
-เลขที่ใบตราส่ง (Bill of Lading)
-===
+## เลขที่ใบตราส่ง (Bill of Lading)
+
 
 เลขที่ใบตราส่ง 1 (Master Bill of Lading) และเลขที่ใบตราส่ง 2  (House Bill of Lading) ในการจัดทำข้อมูลใบขนสินค้าขาเข้า ให้ระบุ ดังนี้
 
@@ -32,5 +32,5 @@
 |Gross Weight Unit(หน่วยของน้ำหนักรวม)|	=|	=|	=|	=|	=|	=|
 |Release Port|	Y|	Y|	Y|	Y|	Y|	Y|
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTYzMzMxNjE5NF19
+eyJoaXN0b3J5IjpbLTc0NDE5NTIxM119
 -->
