KnowledgeCenter/e-Customs/e-Import/e-Import-manual/การกำหนดสถานที่.md updated from https://stackedit.io/

--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/การกำหนดสถานที่.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/การกำหนดสถานที่.md
@@ -1,5 +1,5 @@
-การกำหนดสถานที่
-==
+## การกำหนดสถานที่
+
 
 รหัสสถานที่นำเข้า (Discharge Port ) ให้บันทึกข้อมูลรหัสสถานที่ของศุลกากร ณ ด่านศุลกากร ที่นำของเข้า หรือโรงพักสินค้าหรือที่มั่นคงซึ่งเป็นที่ตรวจและเก็บสินค้าดังกล่าว
 
@@ -17,5 +17,5 @@
 	- **กรณีติดเงื่อนไขความเสี่ยง**ระบบจะสั่งการตรวจเป็น  **"ให้ไปดำเนินการมัดลวด ณ  ด่านศุลกากร ที่นำของเข้า "** หากพนักงานศุลกากรผู้มีอำนาจหน้าที่หรือผู้ที่ได้รับมอบหมายเห็นว่าการเปิดตรวจที่ ด่านศุลกากรที่นำของเข้า (First Port)  จะเป็นประโยชน์กว่าให้ทำการเปิดตรวจของ ณ ที่นำของเข้าได้
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTkxMTA4MjE3N119
+eyJoaXN0b3J5IjpbMTIyMzE1MTE0MV19
 -->
