KnowledgeCenter/e-Customs/e-Import/e-Import-manual/หลักการรวมรายการ.md updated from https://stackedit.io/

--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/หลักการรวมรายการ.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/หลักการรวมรายการ.md
@@ -43,9 +43,9 @@
 
 		- การใช้สิทธิประโยชน์ การใช้สิทธิยกเว้นอากร ในกรณีอื่น ๆ (ถ้ามี)
 
-	- หากมีเลขที่ใบขนสินค้าที่อ้างถึง (Reference Declaration Number) และรายการในใบขนสินค้าที่อ้างถึง (Reference Declaration Line Number) ต่างกัน ให้แยกรายการของในส่วน Import Declaration Detail ด้วย
+3. หากมีเลขที่ใบขนสินค้าที่อ้างถึง (Reference Declaration Number) และรายการในใบขนสินค้าที่อ้างถึง (Reference Declaration Line Number) ต่างกัน ให้แยกรายการของในส่วน Import Declaration Detail ด้วย
 
 	- **กรณีสินค้าที่นำเข้าเป็น รถยนต์ เหล้า บุหรี่ ไวน์ ห้ามรวมรายการ**
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTQ2MjU2MzkzMl19
+eyJoaXN0b3J5IjpbMzkxMDA5NjU2XX0=
 -->
