KnowledgeCenter/e-Customs/e-Import/e-Import-manual/หลักการรวมรายการ.md updated from https://stackedit.io/

--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/หลักการรวมรายการ.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/หลักการรวมรายการ.md
@@ -6,24 +6,21 @@
 	- เพื่อเป็นการแจ้งว่ารายการในใบขนสินค้าขาเข้ารายการนี้มาจาก Invoice Number และ Invoice Item Number ใด
 	- ในแต่ละรายการของใบขนสินค้าขาเข้าสามารถใช้ Invoice Number และ Invoice Item Number ซ้ำกันได้ เช่น กรณีใช้สิทธิ BOI, ใช้สิทธิตามมาตรา 29, สุทธินำกลับ
 
- 3. หลักการรวมเอกสาร Invoice เป็นข้อมูล Import Declaration Detail
+### หลักการรวมเอกสาร Invoice เป็นข้อมูล Import Declaration Detail
 
-	- สามารถบันทึกข้อมูลรายละเอียดใบขนสินค้าจัดกลุ่มรายการตามพิกัดศุลกากร (Tariff Code) และรหัสสถิติสินค้า (Statistical Code) เดียวกันรวมกันได้ภายใต้เงื่อนไข ดังนี้
+1. สามารถบันทึกข้อมูลรายละเอียดใบขนสินค้าจัดกลุ่มรายการตามพิกัดศุลกากร (Tariff Code) และรหัสสถิติสินค้า (Statistical Code) เดียวกันรวมกันได้ภายใต้เงื่อนไข ดังนี้
 
-		- ชนิดของภาษาอังกฤษ (English Description of Goods) และชนิดของภาษาไทย  (Thai Description of Goods) เดียวกัน และ
+	- ชนิดของภาษาอังกฤษ (English Description of Goods) และชนิดของภาษาไทย  (Thai Description of Goods) เดียวกัน และ
+	- ราคาต่อหน่วยเงินต่างประเทศ (Unit Price Foreign) และราคาต่อหน่วยเงินบาท (Unit Price Baht) เท่ากัน และ
+- รหัสสกุลเงินตรา (Currency) ตามมาตรฐาน ISO ของแต่ละรายการเหมือนกัน และ
+- รหัสประเทศกำเนิด (Origin Country) ตามมาตรฐาน ISO เดียวกัน และ
 
-		- ราคาต่อหน่วยเงินต่างประเทศ (Unit Price Foreign) และราคาต่อหน่วยเงินบาท (Unit Price Baht) เท่ากัน และ
+- ปีที่ผลิตสินค้า (Product Year) เดียวกัน และ
 
-		- รหัสสกุลเงินตรา (Currency) ตามมาตรฐาน ISO ของแต่ละรายการเหมือนกัน และ
+- พิกัดสรรพสามิต (Excise No) รวมถึงปริมาณที่ใช้ในการคำนวณภาษีสรรพสามิต (Excise Quantity) และหน่วยของปริมาณ (Excise Quantity Unit) ตามมาตรฐาน ISO เดียวกัน
 
-		- รหัสประเทศกำเนิด (Origin Country) ตามมาตรฐาน ISO เดียวกัน และ
-
-		- ปีที่ผลิตสินค้า (Product Year) เดียวกัน และ
-
-		- พิกัดสรรพสามิต (Excise No) รวมถึงปริมาณที่ใช้ในการคำนวณภาษีสรรพสามิต (Excise Quantity) และหน่วยของปริมาณ (Excise Quantity Unit) ตามมาตรฐาน ISO เดียวกัน
-
-		- มีรหัสสิทธิพิเศษ (Privilege Code) เดียวกัน และมีประเภทของข้อมูล (Nature of Transaction) เดียวกัน เช่น 11 = เป็นการค้า , 21 = เป็นของแถม/ไม่มีมูลค่าทางการค้า , 90 = รับจ้างทำของ  เป็นต้น
-	- ในการจัดทำข้อมูลใบขนสินค้าขาเข้าให้แยกรายการของในส่วน Import Declaration Detail แม้ตามบัญชีราคาสินค้าจะมี Invoice Item Number ซ้ำกัน ในกรณีใช้สิทธิทางภาษีอากรต่างกัน ดังนี้
+	- มีรหัสสิทธิพิเศษ (Privilege Code) เดียวกัน และมีประเภทของข้อมูล (Nature of Transaction) เดียวกัน เช่น 11 = เป็นการค้า , 21 = เป็นของแถม/ไม่มีมูลค่าทางการค้า , 90 = รับจ้างทำของ  เป็นต้น
+2. ในการจัดทำข้อมูลใบขนสินค้าขาเข้าให้แยกรายการของในส่วน Import Declaration Detail แม้ตามบัญชีราคาสินค้าจะมี Invoice Item Number ซ้ำกัน ในกรณีใช้สิทธิทางภาษีอากรต่างกัน ดังนี้
 
 		- เป็นรายการสุทธินำกลับ (Re- Importation Certificate)
 
@@ -47,5 +44,5 @@
 
 	- **กรณีสินค้าที่นำเข้าเป็น รถยนต์ เหล้า บุหรี่ ไวน์ ห้ามรวมรายการ**
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMzkxMDA5NjU2XX0=
+eyJoaXN0b3J5IjpbLTE2ODcwNTc0NDddfQ==
 -->
