--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/หลักการรวมรายการ.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/หลักการรวมรายการ.md
@@ -12,37 +12,26 @@
 
 	- ชนิดของภาษาอังกฤษ (English Description of Goods) และชนิดของภาษาไทย  (Thai Description of Goods) เดียวกัน และ
 	- ราคาต่อหน่วยเงินต่างประเทศ (Unit Price Foreign) และราคาต่อหน่วยเงินบาท (Unit Price Baht) เท่ากัน และ
-- รหัสสกุลเงินตรา (Currency) ตามมาตรฐาน ISO ของแต่ละรายการเหมือนกัน และ
-- รหัสประเทศกำเนิด (Origin Country) ตามมาตรฐาน ISO เดียวกัน และ
-
-- ปีที่ผลิตสินค้า (Product Year) เดียวกัน และ
-
-- พิกัดสรรพสามิต (Excise No) รวมถึงปริมาณที่ใช้ในการคำนวณภาษีสรรพสามิต (Excise Quantity) และหน่วยของปริมาณ (Excise Quantity Unit) ตามมาตรฐาน ISO เดียวกัน
-
+	- รหัสสกุลเงินตรา (Currency) ตามมาตรฐาน ISO ของแต่ละรายการเหมือนกัน และ
+	- รหัสประเทศกำเนิด (Origin Country) ตามมาตรฐาน ISO เดียวกัน และ
+	- ปีที่ผลิตสินค้า (Product Year) เดียวกัน และ
+	- พิกัดสรรพสามิต (Excise No) รวมถึงปริมาณที่ใช้ในการคำนวณภาษีสรรพสามิต (Excise Quantity) และหน่วยของปริมาณ (Excise Quantity Unit) ตามมาตรฐาน ISO เดียวกัน
 	- มีรหัสสิทธิพิเศษ (Privilege Code) เดียวกัน และมีประเภทของข้อมูล (Nature of Transaction) เดียวกัน เช่น 11 = เป็นการค้า , 21 = เป็นของแถม/ไม่มีมูลค่าทางการค้า , 90 = รับจ้างทำของ  เป็นต้น
 2. ในการจัดทำข้อมูลใบขนสินค้าขาเข้าให้แยกรายการของในส่วน Import Declaration Detail แม้ตามบัญชีราคาสินค้าจะมี Invoice Item Number ซ้ำกัน ในกรณีใช้สิทธิทางภาษีอากรต่างกัน ดังนี้
 
-		- เป็นรายการสุทธินำกลับ (Re- Importation Certificate)
-
-		- เป็นรายการใช้สิทธิส่งเสริมการลงทุน (BOI)
-
-		- เป็นรายการใช้สิทธิคลังสินค้าทัณฑ์บน (BOND)
-
-		- เป็นรายการใช้สิทธิขอคืนอากรตามมาตรา 29 (19bis)
-
-		- เป็นรายการใช้สิทธิส่งกลับไปยังต่างประเทศเพื่อขอคืนอากรตามมาตรา 28 (Re-Export)
-
-		- เป็นการใช้สิทธิเขตปลอดอากร (Free Zone : FZ)
-
-		- เป็นการใช้สิทธิเขตประกอบการเสรี (I-EA-T FREEZONE)
-
-		- เป็นรายการขออนุมัติใบขนสินค้าหลายเที่ยวเรือ (Several)
-
-		- การใช้สิทธิประโยชน์ การใช้สิทธิยกเว้นอากร ในกรณีอื่น ๆ (ถ้ามี)
+	- เป็นรายการสุทธินำกลับ (Re- Importation Certificate)
+	- เป็นรายการใช้สิทธิส่งเสริมการลงทุน (BOI)
+	- เป็นรายการใช้สิทธิคลังสินค้าทัณฑ์บน (BOND)
+	- เป็นรายการใช้สิทธิขอคืนอากรตามมาตรา 29 (19bis)
+	- เป็นรายการใช้สิทธิส่งกลับไปยังต่างประเทศเพื่อขอคืนอากรตามมาตรา 28 (Re-Export)
+	- เป็นการใช้สิทธิเขตปลอดอากร (Free Zone : FZ)
+	- เป็นการใช้สิทธิเขตประกอบการเสรี (I-EA-T FREEZONE)
+	- เป็นรายการขออนุมัติใบขนสินค้าหลายเที่ยวเรือ (Several)
+	- การใช้สิทธิประโยชน์ การใช้สิทธิยกเว้นอากร ในกรณีอื่น ๆ (ถ้ามี)
 
 3. หากมีเลขที่ใบขนสินค้าที่อ้างถึง (Reference Declaration Number) และรายการในใบขนสินค้าที่อ้างถึง (Reference Declaration Line Number) ต่างกัน ให้แยกรายการของในส่วน Import Declaration Detail ด้วย
 
-	- **กรณีสินค้าที่นำเข้าเป็น รถยนต์ เหล้า บุหรี่ ไวน์ ห้ามรวมรายการ**
+4. **กรณีสินค้าที่นำเข้าเป็น รถยนต์ เหล้า บุหรี่ ไวน์ ห้ามรวมรายการ**
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE2ODcwNTc0NDddfQ==
+eyJoaXN0b3J5IjpbLTkzOTgyODE2MF19
 -->
