KnowledgeCenter/e-Customs/e-Import/e-Import-manual/ราคาของในการจัดทำข้อมูลใบขนสินค้าขาเข้า.md updated from https://stackedit.io/

--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/ราคาของในการจัดทำข้อมูลใบขนสินค้าขาเข้า.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/ราคาของในการจัดทำข้อมูลใบขนสินค้าขาเข้า.md
@@ -1,7 +1,11 @@
+## ราคาของในการจัดทำข้อมูลใบขนสินค้าขาเข้า
 
+- ราคาของ CIF เงินต่างประเทศ (CIF Value Foreign) 
+- ราคาของ CIF เงินบาท (CIF Value Baht) มีค่าเท่ากับราคาของ CIF เงินต่างประเทศ คูณด้วยอัตราแลกเปลี่ยนเงินตรา
 
+### Total InvoiceTotal Invoice หมายถึง ยอดเงินรวมของราคาสินค้าตามบัญชีราคาสินค้าเป็นเงินบาท 
+-	ทุกรายการในใบขนสินค้ารวมกันแล้วสามารถจะเท่ากับหรือไม่เท่ากับ Total Invoice ในส่วนควบคุม ได้ขึ้นอยู่กับเงื่อนไขการซื้อขาย ตัวอย่างเช่น  ข้อมูลในเอกสารบัญชีราคาสินค้า Total Invoice = 20,000 Term CIF แต่ Unit Price สำแดงราคาเป็น Term FOB โดยให้บันทึกข้อมูลตามจริง ดังนั้น Total Invoice ส่วน Control = Term CIF และ Unit Price ให้ใส่ข้อมูลตาม Term FOB ได้ มีผลให้ จำนวนเงินของแต่ละรายการเงินบาท ตามเอกสาร Invoice  รวมกันทุกรายการ <> Total Invoice ใน Control
 
-> Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNzMwOTk4MTE2XX0=
+eyJoaXN0b3J5IjpbLTQ1OTk1OTc4NV19
 -->
