KnowledgeCenter/e-Customs/e-Import/e-Import-manual/ราคาของในการจัดทำข้อมูลใบขนสินค้าขาเข้า.md updated from https://stackedit.io/

--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/ราคาของในการจัดทำข้อมูลใบขนสินค้าขาเข้า.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/ราคาของในการจัดทำข้อมูลใบขนสินค้าขาเข้า.md
@@ -8,6 +8,20 @@ Total Invoice หมายถึง **ยอดเงินรวมของร
 
 ทุกรายการในใบขนสินค้ารวมกันแล้วสามารถจะเท่ากับหรือไม่เท่ากับ Total Invoice ในส่วนควบคุม ได้ขึ้นอยู่กับเงื่อนไขการซื้อขาย ตัวอย่างเช่น  ข้อมูลในเอกสารบัญชีราคาสินค้า Total Invoice = 20,000 Term CIF แต่ Unit Price สำแดงราคาเป็น Term FOB โดยให้บันทึกข้อมูลตามจริง ดังนั้น Total Invoice ส่วน Control = Term CIF และ Unit Price ให้ใส่ข้อมูลตาม Term FOB ได้ มีผลให้ จำนวนเงินของแต่ละรายการเงินบาท ตามเอกสาร Invoice  รวมกันทุกรายการ <> Total Invoice ใน Control
 
+### ส่วนลด (Discount) 
+
+1. ที่สามารถหักออกจากราคาซื้อขายได้ ได้แก่
+	- ส่วนลดเงินสด  (CASH DISCOUNT)  เป็นส่วนลดที่ผู้ขายลดให้เนื่องจากการชำระเงินเป็น
+เงินสดหรือชำระเงินภายในระยะเวลาที่กำหนด 
+	-  ส่วนลดปริมาณ (QUANTITY DISCOUNT) เป็นส่วนลดที่ผู้ขายลดให้สำหรับการซื้อในปริมาณสูงในช่วงระยะเวลาหนึ่ง 
+	- ส่วนลดทางการค้า (TRADE DISCOUNT) เป็นส่วนลดสำหรับการค้าที่แตกต่างกัน เช่น ขายส่ง ขายปลีก หรือผู้บริโภครายสุดท้าย 
+2. กรณีส่วนลดอื่น ๆ นอกจากข้อ (1) ข้างต้น 
+	-  ในการจัดทำข้อมูลใบขนสินค้าขาเข้าให้ระบุค่า “Y” ในช่อง “Assessment request code” “มีปัญหาพิกัด ราคา พบพนักงานศุลกากร ที่ด่านศุลกากร ที่นำเข้า” 
+	- พบพนักงานศุลกากร ณ หน่วยบริการศุลกากรที่นำของเข้า เพื่อยื่นหลักฐานหรือเอกสารจากผู้ขายมาแสดงให้พนักงานศุลกากรพิจารณาว่ามีเหตุผลเพียงพอและสมควรจะรับส่วนลดนั้นได้หรือไม่ 
+	- หากผู้นำของเข้าไม่สามารถยื่นเอกสารหลักฐานหรือเอกสารจากผู้ขายมาแสดง ในขณะการตรวจสอบพิกัด ราคา และของได้ และประสงค์จะนำของออกจากอารักขาศุลกากรไปก่อน  ให้ผู้นำของเข้าวางเงินเพิ่มเติมเป็นประกันให้ครบจำนวนสูงสุดของอากรที่พึงต้องเสีย
+ - พนักงานศุลกากร หน่วยบริการ จะเสนอผู้อำนวยการสำนักงานศุลกากรพิจารณาอนุมัติ หรือนายด่านศุลกากร หรือผู้ที่ได้รับมอบหมาย เพื่อขอหักส่วนลดหรือขอวางประกันแล้วแต่กรณี
+3. กรณีผู้นำของเข้าไม่มีหลักฐานหรือเอกสารอื่นจากผู้ขายมาแสดง  ให้กำหนดราคาศุลกากรโดย
+ไม่มีส่วนลด
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTExNTE5MTc3NzRdfQ==
+eyJoaXN0b3J5IjpbLTYzMzE2MTI1OV19
 -->
