--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/ราคาของในการจัดทำข้อมูลใบขนสินค้าขาเข้า.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/ราคาของในการจัดทำข้อมูลใบขนสินค้าขาเข้า.md
@@ -29,18 +29,20 @@ Total Invoice หมายถึง **ยอดเงินรวมของร
 1. ค่าบำเหน็จตัวแทนจากการขาย (Selling Commission) หมายถึง ผลตอบแทนที่เป็นตัวเงินที่ผู้ขายจ่ายให้แก่บุคคลหรือนิติบุคคลผู้เป็นตัวแทนของตนในการขายของที่นำเข้า ทั้งนี้ ไม่รวมถึงค่าบำเหน็จตัวแทนจากการซื้อ (Buying Commission)
 2. ค่านายหน้าหรือค่าคนกลาง (Brokerage) หมายถึง ผลตอบแทนที่เป็นตัวเงินที่ผู้ขายและหรือผู้ซื้อจ่ายให้แก่บุคคลหรือนิติบุคคลผู้เป็นตัวกลางในการติดต่อซื้อขายจนสำเร็จ ค่าธรรมเนียมหรือค่านายหน้าเป็นผลตอบแทนที่เกี่ยวข้องกับ “คนกลาง” ซึ่งทำงานโดยอิสระไม่ใช่ลูกจ้างหรือพนักงานของผู้ซื้อหรือผู้ขาย 
 3. ในการจัดทำข้อมูลใบขนสินค้าขาเข้า
-	- ในกรณีที่ผู้นำของเข้ามีหลักฐานการชำระค่าบำเหน็จตัวแทนจากการขาย ให้นำมารวมไว้เป็นราคาศุลกากร
-	- กรณีไม่มีหลักฐานการชำระค่าบำเหน็จตัวแทนหรือค่านายหน้า หรือหลักฐานการซื้อขายของผู้นำของเข้า ให้บวกเพิ่มขึ้นร้อยละ 3 ของราคาซื้อขายตามเงื่อนไขการส่งมอบที่ระบุไว้ใน Invoice สำหรับกรณี ดังต่อไปนี้ 
+	3.1 ในกรณีที่ผู้นำของเข้ามีหลักฐานการชำระค่าบำเหน็จตัวแทนจากการขาย ให้นำมารวมไว้เป็นราคาศุลกากร
+	
+	3.2 กรณีไม่มีหลักฐานการชำระค่าบำเหน็จตัวแทนหรือค่านายหน้า หรือหลักฐานการซื้อขายของผู้นำของเข้า ให้บวกเพิ่มขึ้นร้อยละ 3 ของราคาซื้อขายตามเงื่อนไขการส่งมอบที่ระบุไว้ใน Invoice สำหรับกรณี ดังต่อไปนี้ 
 		- บัญชีราคาสินค้าระบุชื่อผู้นำของเข้าและผู้ซื้อเป็นคนละรายกัน 
 		- ใบตราส่งสินค้า (Bill of Lading:B/L) หรือบัญชีราคาสินค้า (Invoice) สำแดง Sold To และ Ship To เป็นชื่อคนละบริษัท
 		- ใบตราส่งสินค้า (Bill of Lading:B/L) หรือบัญชีราคาสินค้า (Invoice) สำแดง Consignee เป็นชื่อผู้นำเข้าแต่ Notify Party เป็นชื่ออีกบริษัทหนึ่ง ยกเว้นกรณีเป็นชื่อธนาคาร หรือตัวแทนเรือ หรือผู้รับจัดการขนส่ง
 		- มีการชำระเงินผ่านบุคคลที่สาม เว้นแต่ กรณีบริษัทในเครือหรือบริษัทที่มีธุรกิจที่เกี่ยวเนื่องหรือมีความสัมพันธ์ทางธุรกิจการค้าระหว่างกัน ซึ่งได้มอบหมายให้ศูนย์บริหารเงินทำหน้าที่บริหารจัดการเงินตราต่างประเทศแทนตน
 		- มีบุคคลหลายฝ่ายเกี่ยวข้องในการซื้อขาย
 		
-	- กรณีตามข้อ (3.2) หากผู้นำของเข้ายืนยันว่าไม่มีการชำระค่าบำเหน็จตัวแทนหรือ   
+	3.3 กรณีตามข้อ (3.2) หากผู้นำของเข้ายืนยันว่าไม่มีการชำระค่าบำเหน็จตัวแทนหรือ   
 ค่านายหน้า หรือมีแต่ได้มีการรวมไว้เป็นส่วนหนึ่งของราคาแล้ว 
 		-  ในการจัดทำข้อมูลใบขนสินค้าขาเข้าให้ระบุค่า “Y” ในช่อง “Assessment Request Code” “มีปัญหาพิกัด ราคา พบพนักงานศุลกากร ที่ด่านศุลกากรที่นำเข้า” 
 		- พบพนักงานศุลกากร ณ หน่วยบริการศุลกากรที่นำของเข้า เพื่อยื่นหลักฐานหรือเอกสารจากผู้ขายมาแสดงให้พนักงานศุลกากรพิจารณาว่า การซื้อขายไม่มีการชำระค่าบำเหน็จตัวแทนจากการขาย หรือมีแต่นำมารวมไว้เป็นราคาศุลกากรแล้ว
+
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE2NzkxNTQ4MV19
+eyJoaXN0b3J5IjpbNTA5OTAxMzg1XX0=
 -->
