KnowledgeCenter/e-Customs/e-Import/e-Import-manual/ราคาของในการจัดทำข้อมูลใบขนสินค้าขาเข้า.md updated from https://stackedit.io/

--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/ราคาของในการจัดทำข้อมูลใบขนสินค้าขาเข้า.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/ราคาของในการจัดทำข้อมูลใบขนสินค้าขาเข้า.md
@@ -43,6 +43,29 @@ Total Invoice หมายถึง **ยอดเงินรวมของร
 		-  ในการจัดทำข้อมูลใบขนสินค้าขาเข้าให้ระบุค่า “Y” ในช่อง “Assessment Request Code” “มีปัญหาพิกัด ราคา พบพนักงานศุลกากร ที่ด่านศุลกากรที่นำเข้า” 
 		- พบพนักงานศุลกากร ณ หน่วยบริการศุลกากรที่นำของเข้า เพื่อยื่นหลักฐานหรือเอกสารจากผู้ขายมาแสดงให้พนักงานศุลกากรพิจารณาว่า การซื้อขายไม่มีการชำระค่าบำเหน็จตัวแทนจากการขาย หรือมีแต่นำมารวมไว้เป็นราคาศุลกากรแล้ว
 
+### ค่าสิทธิและค่าธรรมเนียมใบอนุญาต (Royalties and License Fees) 
+1. ค่าสิทธิและค่าธรรมเนียมใบอนุญาตจะต้องนำมารวมไว้เป็นราคาศุลกากร 
+2. ในกรณีที่ค่าสิทธิและค่าธรรมเนียมใบอนุญาตนั้นมีความเกี่ยวข้องกับของที่นำเข้าซึ่งผู้ซื้อต้องชำระโดยทางตรงหรือทางอ้อมอันเนื่องจากเป็นเงื่อนไขของการขายของที่นำเข้าเท่าที่ค่าสิทธิและค่าธรรมเนียมใบอนุญาตนั้นยังไม่ได้รวมไว้ในราคาที่ชำระจริงหรือราคาที่จะต้องชำระในการนำค่าสิทธิและค่าธรรมเนียมใบอนุญาตมารวมไว้ในราคาที่ชำระจริงหรือราคาที่จะต้องชำระ
+3. ในการจัดทำข้อมูลใบขนสินค้าขาเข้าให้ระบุค่า “Y” ในช่อง “Assessment Request Code” “มีปัญหาพิกัด ราคา พบพนักงานศุลกากร ที่ด่านศุลกากร ที่นำเข้า”
+4. กรณีมีเอกสารสัญญา ข้อตกลง ข้อผูกพัน หรือหลักฐานอื่นอันเกี่ยวกับค่าสิทธิและค่าธรรมเนียมใบอนุญาต ระบุค่าสิทธิและค่าธรรมเนียมใบอนุญาตอย่างชัดเจนและสามารถคำนวณได้ ให้นำค่าสิทธิและค่าธรรมเนียมใบอนุญาตนั้นมารวมไว้เป็นราคาศุลกากร
+5. กรณีมีเอกสารสัญญา ข้อตกลง ข้อผูกพัน หรือหลักฐานอื่นอันเกี่ยวกับค่าสิทธิและค่าธรรมเนียมใบอนุญาต ระบุค่าสิทธิและค่าธรรมเนียมใบอนุญาตอย่างชัดเจน แต่ยังไม่สามารถคำนวณได้ในขณะจัดทำข้อมูลใบขนสินค้าขาเข้า 
+	1. ให้ผู้นำของเข้าประมาณการค่าสิทธิที่ต้องชำระสำหรับแต่ละรอบบัญชีโดยใช้ฐานค่าสิทธิที่ยังมิได้หักภาษี ณ ที่จ่ายของรอบบัญชีที่ผ่านมานำมาคาดการณ์การขายในรอบบัญชีปัจจุบันว่าน่าจะมียอดขายเป็นจำนวนเท่าใด เพื่อนำมาคำนวณหาประมาณการค่าสิทธิที่จะต้องชำระสำหรับรอบบัญชีนี้ โดยคำนวณเป็นอัตราร้อยละของราคา CIF แล้วนำไปบวกเพิ่มในราคา CIF เป็นราคาศุลกากร 
+	1. ในการจัดทำข้อมูลใบขนสินค้าขาเข้าให้ระบุค่า “หากชำระอากรเกินประสงค์จะขอคืนอากร” ในช่อง “Remark” 
+6. กรณีที่ผู้นำของเข้าทราบว่ามีค่าสิทธิ แต่ไม่สามารถคำนวณค่าสิทธิได้ หรือสัญญาซื้อขายระบุ
+ค่าสิทธิไว้ไม่ชัดเจน 
+	1. ให้ผู้นำของเข้าวางประกันเพิ่มโดยคำนวณค่าสิทธิที่จะต้องวางประกันจากยอดขายสุทธิของรอบบัญชีที่ผ่านมา
+	2. ในการจัดทำข้อมูลใบขนสินค้าขาเข้าให้ระบุค่า “หากชำระอากรเกินประสงค์จะขอคืนอากร” ในช่อง “Remark” 
+ (7) กรณีที่มีการชำระค่าสิทธิในกรณีอื่น ๆ 
+(7.1) ในการจัดทำข้อมูลใบขนสินค้าขาเข้าให้ระบุค่า “มีค่าสิทธิ หากชำระอากรเกินประสงค์จะขอคืนอากร” ในช่อง “Remark” 
+(7.2) พบพนักงานศุลกากร ณ หน่วยบริการศุลกากรที่นำของเข้า เพื่อยื่นหลักฐานหรือเอกสารมาแสดงให้พนักงานศุลกากรพิจารณากำหนดวงเงินประกัน 
+(8) ให้ผู้นำของเข้ายื่นใบสรุปยอดรวมค่าสิทธิต่อหน่วยงานบริการ ณ ด่านศุลกากรที่นำของเข้า ภายใน 30 วันนับแต่วันครบงวดการชำระค่าสิทธิ 
+(9) พนักงานศุลกากร จะดำเนินตรวจสอบและประเมินราคาใหม่และบันทึกผลรายละเอียดของ
+การประเมินราคาและค่าภาษีอากรที่ขาดหรือเกินไว้ในใบขนสินค้าขาเข้า โดยจัดทำข้อมูล Reassessment
+(10) กรณีชำระค่าภาษีอากรไว้ขาด ให้ดำเนินการออกแบบแจ้งการประเมินอากรขาเข้าภาษีสรรพสามิตและภาษีมูลค่าเพิ่ม (แบบ กศก.115) และแจ้งให้ผู้นำของเข้าชำระค่าภาษีอากรพร้อมเงินเพิ่ม
+ให้ครบถ้วน
+(11) กรณีชำระค่าภาษีอากรไว้เกิน ให้ส่งเรื่องไปยังหน่วยงานที่มีหน้าที่พิจารณาคืนเงินอากร พิจารณาดำเนินการต่อไป
+(12) การดำเนินงานในการประเมินอากรใหม่ กรณีอากรเกินหรืออากรขาดไม่ต้องส่งเรื่องให้หน่วยงานคดี พิจารณาความผิดกับผู้นำของเข้า
+
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNTA5OTAxMzg1XX0=
+eyJoaXN0b3J5IjpbMTc5MTU4ODgyOF19
 -->
