KnowledgeCenter/e-Customs/e-Import/e-Import-manual/ราคาของในการจัดทำข้อมูลใบขนสินค้าขาเข้า.md updated from https://stackedit.io/

--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/ราคาของในการจัดทำข้อมูลใบขนสินค้าขาเข้า.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/ราคาของในการจัดทำข้อมูลใบขนสินค้าขาเข้า.md
@@ -55,17 +55,17 @@ Total Invoice หมายถึง **ยอดเงินรวมของร
 ค่าสิทธิไว้ไม่ชัดเจน 
 	1. ให้ผู้นำของเข้าวางประกันเพิ่มโดยคำนวณค่าสิทธิที่จะต้องวางประกันจากยอดขายสุทธิของรอบบัญชีที่ผ่านมา
 	2. ในการจัดทำข้อมูลใบขนสินค้าขาเข้าให้ระบุค่า “หากชำระอากรเกินประสงค์จะขอคืนอากร” ในช่อง “Remark” 
- (7) กรณีที่มีการชำระค่าสิทธิในกรณีอื่น ๆ 
-(7.1) ในการจัดทำข้อมูลใบขนสินค้าขาเข้าให้ระบุค่า “มีค่าสิทธิ หากชำระอากรเกินประสงค์จะขอคืนอากร” ในช่อง “Remark” 
-(7.2) พบพนักงานศุลกากร ณ หน่วยบริการศุลกากรที่นำของเข้า เพื่อยื่นหลักฐานหรือเอกสารมาแสดงให้พนักงานศุลกากรพิจารณากำหนดวงเงินประกัน 
-(8) ให้ผู้นำของเข้ายื่นใบสรุปยอดรวมค่าสิทธิต่อหน่วยงานบริการ ณ ด่านศุลกากรที่นำของเข้า ภายใน 30 วันนับแต่วันครบงวดการชำระค่าสิทธิ 
-(9) พนักงานศุลกากร จะดำเนินตรวจสอบและประเมินราคาใหม่และบันทึกผลรายละเอียดของ
+7. กรณีที่มีการชำระค่าสิทธิในกรณีอื่น ๆ 
+	1. ในการจัดทำข้อมูลใบขนสินค้าขาเข้าให้ระบุค่า “มีค่าสิทธิ หากชำระอากรเกินประสงค์จะขอคืนอากร” 	
+	2. พบพนักงานศุลกากร ณ หน่วยบริการศุลกากรที่นำของเข้า เพื่อยื่นหลักฐานหรือเอกสารมาแสดงให้พนักงานศุลกากรพิจารณากำหนดวงเงินประกัน 
+8. ให้ผู้นำของเข้ายื่นใบสรุปยอดรวมค่าสิทธิต่อหน่วยงานบริการ ณ ด่านศุลกากรที่นำของเข้า ภายใน 30 วันนับแต่วันครบงวดการชำระค่าสิทธิ 
+9. พนักงานศุลกากร จะดำเนินตรวจสอบและประเมินราคาใหม่และบันทึกผลรายละเอียดของ
 การประเมินราคาและค่าภาษีอากรที่ขาดหรือเกินไว้ในใบขนสินค้าขาเข้า โดยจัดทำข้อมูล Reassessment
-(10) กรณีชำระค่าภาษีอากรไว้ขาด ให้ดำเนินการออกแบบแจ้งการประเมินอากรขาเข้าภาษีสรรพสามิตและภาษีมูลค่าเพิ่ม (แบบ กศก.115) และแจ้งให้ผู้นำของเข้าชำระค่าภาษีอากรพร้อมเงินเพิ่ม
+10. กรณีชำระค่าภาษีอากรไว้ขาด ให้ดำเนินการออกแบบแจ้งการประเมินอากรขาเข้าภาษีสรรพสามิตและภาษีมูลค่าเพิ่ม (แบบ กศก.115) และแจ้งให้ผู้นำของเข้าชำระค่าภาษีอากรพร้อมเงินเพิ่ม
 ให้ครบถ้วน
-(11) กรณีชำระค่าภาษีอากรไว้เกิน ให้ส่งเรื่องไปยังหน่วยงานที่มีหน้าที่พิจารณาคืนเงินอากร พิจารณาดำเนินการต่อไป
+11. กรณีชำระค่าภาษีอากรไว้เกิน ให้ส่งเรื่องไปยังหน่วยงานที่มีหน้าที่พิจารณาคืนเงินอากร พิจารณาดำเนินการต่อไป
 (12) การดำเนินงานในการประเมินอากรใหม่ กรณีอากรเกินหรืออากรขาดไม่ต้องส่งเรื่องให้หน่วยงานคดี พิจารณาความผิดกับผู้นำของเข้า
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTc5MTU4ODgyOF19
+eyJoaXN0b3J5IjpbOTYyNTgyNzcyXX0=
 -->
