KnowledgeCenter/e-Customs/e-Import/e-Import-manual/ราคาของในการจัดทำข้อมูลใบขนสินค้าขาเข้า.md updated from https://stackedit.io/

--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/ราคาของในการจัดทำข้อมูลใบขนสินค้าขาเข้า.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/ราคาของในการจัดทำข้อมูลใบขนสินค้าขาเข้า.md
@@ -64,8 +64,8 @@ Total Invoice หมายถึง **ยอดเงินรวมของร
 10. กรณีชำระค่าภาษีอากรไว้ขาด ให้ดำเนินการออกแบบแจ้งการประเมินอากรขาเข้าภาษีสรรพสามิตและภาษีมูลค่าเพิ่ม (แบบ กศก.115) และแจ้งให้ผู้นำของเข้าชำระค่าภาษีอากรพร้อมเงินเพิ่ม
 ให้ครบถ้วน
 11. กรณีชำระค่าภาษีอากรไว้เกิน ให้ส่งเรื่องไปยังหน่วยงานที่มีหน้าที่พิจารณาคืนเงินอากร พิจารณาดำเนินการต่อไป
-(12) การดำเนินงานในการประเมินอากรใหม่ กรณีอากรเกินหรืออากรขาดไม่ต้องส่งเรื่องให้หน่วยงานคดี พิจารณาความผิดกับผู้นำของเข้า
+12. การดำเนินงานในการประเมินอากรใหม่ กรณีอากรเกินหรืออากรขาดไม่ต้องส่งเรื่องให้หน่วยงานคดี พิจารณาความผิดกับผู้นำของเข้า
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbOTYyNTgyNzcyXX0=
+eyJoaXN0b3J5IjpbLTE0NzAwNzIwMjVdfQ==
 -->
