--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/ราคาของในการจัดทำข้อมูลใบขนสินค้าขาเข้า.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/ราคาของในการจัดทำข้อมูลใบขนสินค้าขาเข้า.md
@@ -66,6 +66,37 @@ Total Invoice หมายถึง **ยอดเงินรวมของร
 11. กรณีชำระค่าภาษีอากรไว้เกิน ให้ส่งเรื่องไปยังหน่วยงานที่มีหน้าที่พิจารณาคืนเงินอากร พิจารณาดำเนินการต่อไป
 12. การดำเนินงานในการประเมินอากรใหม่ กรณีอากรเกินหรืออากรขาดไม่ต้องส่งเรื่องให้หน่วยงานคดี พิจารณาความผิดกับผู้นำของเข้า
 
+
+
+### ค่าประกันภัย ค่าขนส่งของ ค่าขนของลง ค่าขนของขึ้น หรือ ค่าจัดการต่าง ๆ**
+
+(1) กรณีบัญชีราคาสินค้า (Invoice) รายใดไม่มีค่าประกันภัย (Insurance) หรือไม่มีเอกสารหลักฐานการจ่ายค่าประกันภัยให้บวกค่าประกันภัยขึ้นอีกร้อยละ 1 ของราคา FOB
+
+(2) กรณีบัญชีราคาสินค้า (Invoice) รายใดไม่มีค่าขนส่งของ (Freight) หรือไม่มีเอกสารหลักฐานการจ่ายค่าขนส่งของให้ดำเนินการดังนี้
+
+(2.1) การนำเข้าทางเรือและทางบกให้บวกค่าขนส่งเพิ่มขึ้นอีกร้อยละ 10 ของราคา FOB
+
+(2.2) การนำเข้าทางอากาศยานให้บวกค่าขนส่งทางอากาศยานเข้ากับราคาของ และ  
+ค่าประกันภัย เป็นเกณฑ์ในการคำนวณค่าภาษีอากรดังนี้
+
+- ให้ใช้ค่าขนส่งตามที่ปรากฏในต้นฉบับ HAWB  (House Air Waybill) จากท่าต้นทางบรรทุก ซึ่งได้รับการรับรองจากบริษัทผู้ดำเนินการคลังสินค้า อนุมัติ
+
+- หากไม่ปรากฏค่าขนส่งในต้นฉบับ HAWB หรือไม่มีต้นฉบับ HAWB ให้ใช้ค่าขนส่งที่ปรากฏใน MAWB  (Master Air Waybill)
+
+- หากไม่ปรากฏค่าขนส่งของในต้นฉบับ HAWB หรือไม่มีต้นฉบับ HAWB หรือไม่ปรากฏค่าขนส่งของใน MAWB ให้ใช้อัตราเฉลี่ยค่าขนส่งของตาม Full IATA Rate ตามหนังสือ The Thai Cargo Tariff
+
+- ค่าขนส่งของสำหรับของเร่งด่วน ไม่ว่าจะนำเข้าโดยมีผู้โดยสารนำพาหรือไม่ก็ตาม ค่าระวางบรรทุกที่ใช้ในการคำนวณเงินอากร  ให้ใช้ตามที่ปรากฏในบัญชีราคาสินค้า  หรือหลักฐานการจ่ายค่าขนส่งของดังกล่าว หากไม่ปรากฏค่าระวางบรรทุกในบัญชีราคาสินค้าหรือหลักฐานการจ่ายค่าขนส่งของดังกล่าว  ให้ใช้อัตราเฉลี่ยค่าขนส่งของตาม ZONE ที่กรมศุลกากรอนุมัติให้ใช้สำหรับสินค้าเร่งด่วนเป็นเกณฑ์ในการคำนวณ  ค่าภาษีอากร
+
+- ของที่นำเข้าทางอากาศยาน แต่มีบัญชีราคาสินค้า (INVOICE) สำแดงราคารวม  
+ค่าขนส่งทางอากาศยานเท่ากับราคารวมค่าขนส่งที่นำเข้าทางเรือ ในกรณีเช่นนี้ การกำหนดราคาให้หักค่าขนส่งทางเรือออกเสียจากราคาดังกล่าว แล้วบวกค่าขนส่งทางอากาศยานที่ผู้ขายหรือผู้ส่งออกได้ชำระไป หากไม่ทราบ  
+ค่าขนส่งทางเรือที่จะคำนวณหักออกได้ ให้หักค่าขนส่งของทางเรือออกในอัตราร้อยละ 10 ของราคาของ
+
+(2.3) การนำเข้าทางไปรษณีย์ ให้บวกค่าขนส่งตามอัตราไปรษณียากรสำหรับพัสดุไปรษณีย์ระหว่างประเทศของบริษัทไปรษณีย์ไทย จำกัด ที่ใช้อยู่ในขณะนำเข้า
+
+(3) บัญชีราคาสินค้า (INVOICE) ที่ยังไม่รวมค่าขนของลง ค่าขนของขึ้น หรือค่าจัดการต่าง ๆ ที่เกี่ยวเนื่องกับการขนส่งของมายังด่านศุลกากรที่นำของเข้า  แต่ข้อตกลงการส่งมอบของได้กำหนดค่าใช้จ่ายต่าง ๆ  ไว้ ให้นำค่าใช้จ่ายดังกล่าวบวกราคาซื้อขายตามเอกสารหลักฐานที่มีการชำระจริง
+
+(4) กรณีบัญชีราคาสินค้า (INVOICE) เป็นราคา EXW (Ex-Works), FCA (Free Carrier), FAS (Free Alongside Ship) หากปรากฏว่า ไม่มีเอกสารหลักฐานมายื่นแสดง ต้องบวกเพิ่มขึ้นอีกร้อยละ 3 ของราคา EXW, FCA, FAS โดยให้ถือเป็นราคา FOB
+
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE0NzAwNzIwMjVdfQ==
+eyJoaXN0b3J5IjpbNzEyNjMxMDU1LC0xNDcwMDcyMDI1XX0=
 -->
